--- a/examples/german-credit.ipynb
+++ b/examples/german-credit.ipynb
@@ -169,6 +169,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'CountFrequencyEncoder' from 'category_encoders' (/Users/oli/opt/anaconda3/envs/woe/lib/python3.10/site-packages/category_encoders/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcategory_encoders\u001b[39;00m \u001b[39mimport\u001b[39;00m CountFrequencyEncoder\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Example data\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'CountFrequencyEncoder' from 'category_encoders' (/Users/oli/opt/anaconda3/envs/woe/lib/python3.10/site-packages/category_encoders/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from category_encoders import CountFrequencyEncoder\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Example data\n",
+    "data = pd.Series(['dog', 'dog', 'cat', 'cat', 'zebra', 'fish'])\n",
+    "\n",
+    "# Define the encoder\n",
+    "encoder = CountFrequencyEncoder(threshold=1, replace_with='other')\n",
+    "\n",
+    "# Encode the data\n",
+    "encoded_data = encoder.fit_transform(data)\n",
+    "\n",
+    "print(encoded_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
