--- a/examples/german-credit.ipynb
+++ b/examples/german-credit.ipynb
@@ -3,7 +3,31 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from weight_of_evidence.tree_binner import TreeBinner"
@@ -11,8 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -34,8 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def prepare_data(config):\n",
@@ -49,8 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "CONFIG = yaml.safe_load(open('config.yaml','r'))"
@@ -58,8 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "X, y = prepare_data(CONFIG)"
@@ -67,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,59 +201,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'CountFrequencyEncoder' from 'category_encoders' (/Users/oli/opt/anaconda3/envs/woe/lib/python3.10/site-packages/category_encoders/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcategory_encoders\u001b[39;00m \u001b[39mimport\u001b[39;00m CountFrequencyEncoder\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# Example data\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'CountFrequencyEncoder' from 'category_encoders' (/Users/oli/opt/anaconda3/envs/woe/lib/python3.10/site-packages/category_encoders/__init__.py)"
-     ]
-    }
-   ],
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "from category_encoders import CountFrequencyEncoder\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Example data\n",
-    "data = pd.Series(['dog', 'dog', 'cat', 'cat', 'zebra', 'fish'])\n",
-    "\n",
-    "# Define the encoder\n",
-    "encoder = CountFrequencyEncoder(threshold=1, replace_with='other')\n",
-    "\n",
-    "# Encode the data\n",
-    "encoded_data = encoder.fit_transform(data)\n",
-    "\n",
-    "print(encoded_data)\n"
+    "test = pd.DataFrame(\n",
+    "        {\n",
+    "            \"a\": [\"a\", \"a\", \"b\", \"b\", \"c\", \"d\"],\n",
+    "            \"b\": [\"x\", \"y\", \"x\", \"x\", \"z\", \"z\"],\n",
+    "            \"c\": [\"dog\", \"cat\", \"dog\", \"fish\", \"fish\", \"fish\"],\n",
+    "            \"d\": [\"blue\", \"red\", \"green\", \"green\", \"yellow\", \"yellow\"],\n",
+    "            \"e\": [\"sheep\", \"sheep\", \"sheep\", \"sheep\", \"sheep\", \"sheep\"],\n",
+    "        }\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "N = len(test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class Otherizer(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, threshold: float = 0.1):\n",
+    "        \"\"\"\n",
+    "        :param threshold: The threshold below which a value is replaced with 'other'. Default is 0.1, i.e., any value\n",
+    "                          that appears in less than 10% of columns is replaced.\n",
+    "        \"\"\"\n",
+    "        self.threshold = threshold\n",
+    "        self.common_strings = {}\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        \"\"\"\n",
+    "        Fit the transformer on the input data and identify common strings for each column.\n",
+    "        \"\"\"\n",
+    "        N = len(X)\n",
+    "        for col in X.select_dtypes(\"object\").columns:\n",
+    "            counts = pd.Series(X[col]).value_counts()\n",
+    "            common_strings = counts[(counts / N) >= self.threshold].index\n",
+    "            self.common_strings[col] = list(common_strings)\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        \"\"\"\n",
+    "        Transform the input data, replacing uncommon strings with 'other'.\n",
+    "        \"\"\"\n",
+    "        X_transformed = pd.DataFrame(X.copy())\n",
+    "        for col, common_strings in self.common_strings.items():\n",
+    "            print(col)\n",
+    "            print(common_strings)\n",
+    "            X_transformed[col] = np.where(X[col].isin(common_strings), col, \"other\")\n",
+    "        return X_transformed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ot = Otherizer(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 200 candidates, totalling 1000 fits\n",
-      "Best score: 0.762\n",
-      "Best parameters: {'logistic_regression__C': 0.001, 'tree_binner__max_depth': 4, 'tree_binner__min_impurity_decrease': 0.42754101835854963, 'tree_binner__min_samples_leaf': 2, 'woe_encoder__regularization': 0.4393365018657701}\n"
+      "a\n",
+      "['a', 'b']\n",
+      "b\n",
+      "['x', 'z']\n",
+      "c\n",
+      "['fish', 'dog']\n",
+      "d\n",
+      "['green', 'yellow']\n",
+      "e\n",
+      "['sheep']\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>d</th>\n",
+       "      <th>e</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>b</td>\n",
+       "      <td>c</td>\n",
+       "      <td>other</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a</td>\n",
+       "      <td>other</td>\n",
+       "      <td>other</td>\n",
+       "      <td>other</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a</td>\n",
+       "      <td>b</td>\n",
+       "      <td>c</td>\n",
+       "      <td>d</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a</td>\n",
+       "      <td>b</td>\n",
+       "      <td>c</td>\n",
+       "      <td>d</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>other</td>\n",
+       "      <td>b</td>\n",
+       "      <td>c</td>\n",
+       "      <td>d</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>other</td>\n",
+       "      <td>b</td>\n",
+       "      <td>c</td>\n",
+       "      <td>d</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       a      b      c      d  e\n",
+       "0      a      b      c  other  e\n",
+       "1      a  other  other  other  e\n",
+       "2      a      b      c      d  e\n",
+       "3      a      b      c      d  e\n",
+       "4  other      b      c      d  e\n",
+       "5  other      b      c      d  e"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "ot.fit_transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': ['a', 'b'],\n",
+       " 'b': ['x', 'z'],\n",
+       " 'c': ['fish', 'dog'],\n",
+       " 'd': ['green', 'yellow'],\n",
+       " 'e': ['sheep']}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ot.common_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "counts = pd.Series(test['d']).value_counts()\n",
+    "common_strings = counts[(counts / N) >= 1].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([], dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "common_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "BEST_PARAMS_WOE = find_best_model_params(AUTO_BIN_PIPELINE, TREE_BIN_PARAMS_GRID, X_train, y_train,n=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,24 +512,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline: xgb\n",
-      "CV score: 0.756\n",
-      "Pipeline: linear\n",
-      "CV score: 0.770\n",
-      "Pipeline: auto_bin\n",
-      "CV score: 0.762\n",
-      "Pipeline: auto_bin_tuned\n",
-      "CV score: 0.762\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for name, pipeline in PIPELINES.items():\n",
     "    print(f'Pipeline: {name}')\n",
@@ -331,9 +598,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
