--- a/examples/german-credit.ipynb
+++ b/examples/german-credit.ipynb
@@ -24,18 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from weight_of_evidence.tree_binner import TreeBinner"
+    "from weight_of_evidence.tree_binner import TreeBinner\n",
+    "from weight_of_evidence.otherizer import Otherizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -99,12 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "AUTO_BIN_PIPELINE = Pipeline([\n",
     "    ('tree_binner', TreeBinner(max_depth=5,min_samples_split=4,min_samples_leaf=4,category_type='str')),\n",
+    "    ('otherizer', Otherizer(threshold=0.05)),\n",
     "    ('woe_encoder', WOEEncoder(regularization=1)),\n",
     "    ('standard_scaler', StandardScaler()),\n",
     "    ('logistic_regression', LogisticRegression(max_iter=10_000,C=0.01))\n",
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +196,7 @@
     "    'tree_binner__max_depth': sp_randint(2, 6),\n",
     "    'tree_binner__min_samples_leaf': sp_randint(1, 5),\n",
     "    'tree_binner__min_impurity_decrease': sp_uniform(0, 1),\n",
+    "    'otherizer__threshold': sp_uniform(0, 1),\n",
     "    'woe_encoder__regularization': sp_uniform(0, 1),\n",
     "    'logistic_regression__C': np.logspace(-3, 2, 6),\n",
     "}"
@@ -201,309 +204,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "test = pd.DataFrame(\n",
-    "        {\n",
-    "            \"a\": [\"a\", \"a\", \"b\", \"b\", \"c\", \"d\"],\n",
-    "            \"b\": [\"x\", \"y\", \"x\", \"x\", \"z\", \"z\"],\n",
-    "            \"c\": [\"dog\", \"cat\", \"dog\", \"fish\", \"fish\", \"fish\"],\n",
-    "            \"d\": [\"blue\", \"red\", \"green\", \"green\", \"yellow\", \"yellow\"],\n",
-    "            \"e\": [\"sheep\", \"sheep\", \"sheep\", \"sheep\", \"sheep\", \"sheep\"],\n",
-    "        }\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "N = len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "class Otherizer(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self, threshold: float = 0.1):\n",
-    "        \"\"\"\n",
-    "        :param threshold: The threshold below which a value is replaced with 'other'. Default is 0.1, i.e., any value\n",
-    "                          that appears in less than 10% of columns is replaced.\n",
-    "        \"\"\"\n",
-    "        self.threshold = threshold\n",
-    "        self.common_strings = {}\n",
-    "\n",
-    "    def fit(self, X, y=None):\n",
-    "        \"\"\"\n",
-    "        Fit the transformer on the input data and identify common strings for each column.\n",
-    "        \"\"\"\n",
-    "        N = len(X)\n",
-    "        for col in X.select_dtypes(\"object\").columns:\n",
-    "            counts = pd.Series(X[col]).value_counts()\n",
-    "            common_strings = counts[(counts / N) >= self.threshold].index\n",
-    "            self.common_strings[col] = list(common_strings)\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, X):\n",
-    "        \"\"\"\n",
-    "        Transform the input data, replacing uncommon strings with 'other'.\n",
-    "        \"\"\"\n",
-    "        X_transformed = pd.DataFrame(X.copy())\n",
-    "        for col, common_strings in self.common_strings.items():\n",
-    "            print(col)\n",
-    "            print(common_strings)\n",
-    "            X_transformed[col] = np.where(X[col].isin(common_strings), col, \"other\")\n",
-    "        return X_transformed\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ot = Otherizer(0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n",
-      "['a', 'b']\n",
-      "b\n",
-      "['x', 'z']\n",
-      "c\n",
-      "['fish', 'dog']\n",
-      "d\n",
-      "['green', 'yellow']\n",
-      "e\n",
-      "['sheep']\n"
+      "Fitting 5 folds for each of 200 candidates, totalling 1000 fits\n",
+      "Best score: 0.782\n",
+      "Best parameters: {'logistic_regression__C': 0.01, 'otherizer__threshold': 0.03682186763599138, 'tree_binner__max_depth': 4, 'tree_binner__min_impurity_decrease': 0.27340707193070624, 'tree_binner__min_samples_leaf': 4, 'woe_encoder__regularization': 0.07535906035246231}\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
-       "      <th>c</th>\n",
-       "      <th>d</th>\n",
-       "      <th>e</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a</td>\n",
-       "      <td>b</td>\n",
-       "      <td>c</td>\n",
-       "      <td>other</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>a</td>\n",
-       "      <td>other</td>\n",
-       "      <td>other</td>\n",
-       "      <td>other</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>a</td>\n",
-       "      <td>b</td>\n",
-       "      <td>c</td>\n",
-       "      <td>d</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>a</td>\n",
-       "      <td>b</td>\n",
-       "      <td>c</td>\n",
-       "      <td>d</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>other</td>\n",
-       "      <td>b</td>\n",
-       "      <td>c</td>\n",
-       "      <td>d</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>other</td>\n",
-       "      <td>b</td>\n",
-       "      <td>c</td>\n",
-       "      <td>d</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       a      b      c      d  e\n",
-       "0      a      b      c  other  e\n",
-       "1      a  other  other  other  e\n",
-       "2      a      b      c      d  e\n",
-       "3      a      b      c      d  e\n",
-       "4  other      b      c      d  e\n",
-       "5  other      b      c      d  e"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "ot.fit_transform(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': ['a', 'b'],\n",
-       " 'b': ['x', 'z'],\n",
-       " 'c': ['fish', 'dog'],\n",
-       " 'd': ['green', 'yellow'],\n",
-       " 'e': ['sheep']}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ot.common_strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "counts = pd.Series(test['d']).value_counts()\n",
-    "common_strings = counts[(counts / N) >= 1].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([], dtype='object')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "common_strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "BEST_PARAMS_WOE = find_best_model_params(AUTO_BIN_PIPELINE, TREE_BIN_PARAMS_GRID, X_train, y_train,n=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,9 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline: xgb\n",
+      "CV score: 0.756\n",
+      "Pipeline: linear\n",
+      "CV score: 0.770\n",
+      "Pipeline: auto_bin\n",
+      "CV score: 0.762\n"
+     ]
+    }
+   ],
    "source": [
     "for name, pipeline in PIPELINES.items():\n",
     "    print(f'Pipeline: {name}')\n",
